# mikrotik-wg-flask

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  ruff.toml  run.py
app/: __init__.py  models.py
app/routes/: api.py  main.py
app/services/: config_builder.py  keygen.py  qr.py
app/templates/: base.html  config_detail.html  config_list.html  index.html
app/templates/partials/: client_card.html  client_list.html  error.html  server_config.html
